# memviz

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  build.sh  main_linux.cpp  valgrind.supp
cmake_local/: MEMVIZClangFlags.cmake  MEMVIZDefaultFlags.cmake  MEMVIZMSVCFlags.cmake
include/: basic.h  error.h  error_lists.h  platform.h  user_input.h
include/systems/: logger.h
include/systems/renderer/: renderer.h  vulkan_backend.h
lib/: core
src/: basic.cpp  x11_platform.cpp
src/systems/: logger.cpp
src/systems/renderer/: vulkan_backend.cpp
